--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>hola, primer cambio</h1>
+    <h2>otro titulo color diferente</h2>
+    <p>Un nuevo parrafo on fire</p>
 </body>
 </html>
